# _CourtDefense

./: .clineignore  .gitattributes  .gitignore  CLAUDE.md  COMMERCIAL_AUDIT_REPORT.md  COMMERCIAL_PRODUCTION_GUIDE.md  README.md  README.txt  advocate_agent.py  analyze_defense.py  analyze_defense_v2.py  app_streamlit.py  audit_transcription.py  build.ps1  case_config_example.py  defense_master.py  extract_pdf.py  import os транскрприция.py  import os.py  launcher.py  lawyer_analyzer.py  orchestrator.py  organize_archive.py  pipeline.py  pyproject.toml  requirements.txt  run_app.py  run_audio_cutter.py  search_phrases.txt.txt  search_phrases_example.txt  start_app.py  test_desktop_integration.py  transcribe.py
android/: README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: btn_primary_bg.xml  hint_bg.xml  ic_launcher.xml  ic_launcher_round.xml  input_bg.xml
android/app/src/main/res/layout/: activity_main.xml  activity_setup.xml  activity_splash.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android_standalone/: README.md  settings.gradle
android_standalone/app/: build.gradle  proguard-rules.pro
android_standalone/app/src/main/: AndroidManifest.xml
android_standalone/app/src/main/res/drawable/: card_bg.xml  ic_launcher.xml  ic_launcher_round.xml  input_bg.xml
android_standalone/app/src/main/res/layout/: activity_main.xml  activity_result.xml  item_file.xml  (+1 more)
assets/: CourtDefense.spec
docs/: AUDIO_CUTTER_INTEGRATION.md  AUDIO_CUTTER_QUICKSTART.md  AUDIO_CUTTER_SUMMARY.md  CUTTING_STEP_BY_STEP.md  DEPLOYMENT_SUMMARY.md  DESKTOP_APP_SETUP.md  DEVELOPER_SETUP.md  HOW_TO_RUN.md  INTEGRATION_COMPLETE.txt  INTEGRATION_SUMMARY.md  POETRY_MIGRATION_SUMMARY.md  POETRY_SETUP.md  QUICK_START_AUDIO_CUTTER.md  UI_REFACTOR_CHANGELOG.md  UI_REFACTOR_SUMMARY.txt
scripts/: production_run_final.py  run_production_cut.py
scripts/legacy/: advocate_agent.py  analyze_defense.py  analyze_defense_v2.py  audit_transcription.py  defense_master.py  extract_pdf.py  lawyer_analyzer.py  orchestrator.py  organize_archive.py  pipeline.py  transcribe.py
src/court_defense/: __init__.py
src/court_defense/api/: __init__.py  main.py
src/court_defense/api/static/: index.html
src/court_defense/core/: __init__.py  audio_cutter.py  config.py  services.py
tests/: __init__.py  conftest.py  test_audio_cutter.py  test_pipeline.py
webapp/: audio_cutter.py  main.py  services.py
webapp/static/: index.html
(+14 files in other folders)
